/*
  äºº
*/

syntax = "proto3";

package swb.cashmere;

message GetPersonRequest{
  string id = 1;
}

message GetGroupPersonsRequest{
  string group_id = 1;
}

message GetPersonsPageRequest{
  int32 start = 1;
  int32 end = 2;
}
